# rigscribe

./: .gitignore  Cargo.toml  README.md  STREAMING_DEBUG_REPORT.md  TUTORIAL.md
data/: optimizer.json  prompt_officer.json  test.json  test2.json
examples/: basic_usage.rs
logs/: rigscribe.log.2025-12-30
prompts_perssitense_cache/: 2026.json
src/: agents.rs  error.rs  lib.rs  logging.rs  main.rs  pipline.rs  types.rs  utilities.rs
src/agents/: mod.rs  optimizer.rs
src/tools/: deconstructor.rs  mod.rs  prompt_reviewer.rs  web_searcher.rs
src/types/: artifact.rs  common.rs  config.rs  mod.rs  pipeline.rs
