[package]
name = "rigscribe"
version = "0.1.0"
edition = "2024"

[dependencies]

rig-core = {version="0.26.0",features=["all"]}
schemars ={version= "1.1.0"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
termimad = "0.34.1"
thiserror = "2.0.17"
tokio = {version= "1.48.0",features=["full"]}
